refactor java 21 specific code